chore: correct main & start script; add engines

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "type": "module",
   "name": "groupsaver-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider node server.js"
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": ">=20"
   },
   "keywords": [],
   "author": "",
